[package]
name = "dringos"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-alpha.6"
crc16 = "0.4.0"
frankenstein = {git="https://github.com/tiberiusferreira/frankenstein", branch="add-timeout"}
serialport = "4.0.1"
dotenv = "0.15.0"
log = "0.4.14"
tokio = {version = "1", features = ["macros", "rt"]}
once_cell = "1.9.0"
flexi_logger = "0.22.0"
pretty_env_logger = "0.4.0"
crc = "2.0"
sqlx = {version = "0.5.10", features=["runtime-tokio-native-tls", "postgres", "macros"]}
log-panics = "2.0.0"