[package]
name = "dringos"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-alpha.6"
frankenstein = "0.9.5"
chrono = "0.4.19"
serialport = "4"
dotenv = "0.15"
log = "0.4"
tokio = {version = "1", features = ["macros", "rt"]}
once_cell = "1"
flexi_logger = {version = "0.22", default-features = false, features=["colors"]}
crc = "2"
sqlx = {version = "0.5", default-features = false, features=["runtime-tokio-native-tls", "postgres", "macros"]}
gpio-cdev = "0.4"
log-panics = "2"